<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/ic_main"
        android:title="@string/mainscreentext" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person"
        android:title="@string/profiletext" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/settingstext" />

    <item
        android:id="@+id/filmsFragment"
        android:icon="@drawable/ic_movie"
        android:title="@string/filmtext" />

    <item
        android:id="@+id/reviewsFragment"
        android:icon="@drawable/ic_star_rate"
        android:title="@string/reviewstext" />
</menu>